# rbxgoldy

./: README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.cjs  vite.config.js
.cargo/: config.toml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs  main.rs
src/lib/: bot.ts  browser.ts  captcha.ts  helper.ts
src/lib/captcha/: captcha.ts
src/routes/: +page.svelte
