[package]
name = "rbxgoldy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rbxgoldy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
opt-level = 1
debug = false
strip = false
codegen-units = 256
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

